Fix icons and text align in contact
I have fixed the alignment of the text and centered it to the icons in
contact section. I still need to add other icons for social networks.

--- a/css/style1.css
+++ b/css/style1.css
@@ -62,9 +62,16 @@ li a {
 
 #about,
 #contact {
-	padding: 120px 50px;
 	width: 50%;
 	margin: 0 auto;
+}
+
+#about {
+	padding: 120px 50px;
+}
+
+#contact {
+	padding: 105px 50px;
 }
 
 #contact h2 {
@@ -112,24 +119,26 @@ img {
 	margin: 50px 0;
 }
 
+/*.phone p {
+	line-height: 10px;
+}*/
+
 .icon {
-	width: 7%;
-	padding: 30px 0 0 0;
+	width: 50px;
+	vertical-align: middle;
 }
 
 .text-icon {
-	display: inline-block;
-	padding-left: 20px;
-	border: 1px solid #000;
+	padding-left: 5px;
 }
 
 #footer {
-	height: 100px;
+	height: 120px;
 	background: #000;
 	color: #fff;
 }
 
 small {
 	display: inline-block;
-	padding: 35px 0 0 100px;
+	padding: 50px 0 0 100px;
 }
